# cas3

./: CMakeLists.txt  README.md  gen_icon.py
.github/workflows/: build.yml
src/: cas.h  compute.c  eval.c  fields.c  main.c  ui.c
workflows/: build.yml
